--- a/01_OPL.values_types_and_operators/js_and_the_web.html
+++ b/01_OPL.values_types_and_operators/js_and_the_web.html
@@ -10,12 +10,19 @@
 <div class="container">
     <h1>Javascript and the web</h1>
     <div id="hello" class="alert alert-primary"></div>
+    <div id="sum" class="alert alert-primary"></div>
 </div>
 <script>
         const helloEl = document.getElementById("hello");
         const helloMessage = `Hello allemaal!`;
         console.log(helloMessage);
         helloEl.innerHTML = helloMessage;
+
+        const sumEl = document.getElementById("sum");
+        const number1 = 50;
+        const number2 = 60;
+        const numberSum = number1 + number2;
+        sumEl.innerHTML = `som = ${numberSum}`;
 </script>
 </body>
 </html>
