--- a/toetsen/toets-herkansing-20222023/oefcitaten.html
+++ b/toetsen/toets-herkansing-20222023/oefcitaten.html
@@ -19,6 +19,8 @@
 <hr>
 <div id="otherquotes"></div>
 <button id="who" onclick="addAuthor();">Van wie is dit citaat?</button>
+<input id="answer">
+<button id="check" onclick="checkAnswer();">Ik weet het!</button>
 <button id="next" onclick="more();">Volgende citaat</button>
 <footer id="footer"></footer>
 
