improve code for bundel 0-1-2-3 - to use next year

--- a/00.getting_started/index.html
+++ b/00.getting_started/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 <script type="text/javascript">
-    console.log("Dadelijk in html of met verwijzing naar JavaScript bestand");
+    console.log("Rechtstreeks in html of met verwijzing naar JavaScript bestand");
 </script>
 
-<script src="js/01.values.js"></script>
+<script src="js/examplecode.js"></script>
 
 <div class="container">
-    <h4>values, types and operators</h4>
+    <h4>Getting Started</h4>
     <ul class="list-group">
         <li class="list-group-item">open index.html in de browser.</li>
         <li class="list-group-item">open de browser dev tools.</li>
