--- a/01.values_types_and_operators/index.html
+++ b/01.values_types_and_operators/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <script type="text/javascript">
-    console.log("Dadelijk in html of met verwijzing naar JavaScript bestand");
+    console.log("Rechtstreeks in html of met verwijzing naar JavaScript bestand");
 </script>
 
 <script src="js/01.values.js"></script>
