--- a/01_OPL.values_types_and_operators/js_and_the_web_form.html
+++ b/01_OPL.values_types_and_operators/js_and_the_web_form.html
@@ -14,6 +14,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">Person</span>
             </div>
+            <!-- attribute placeholder is de text die je ziet als de user nog niets ingetikt heeft -->
             <input type="text" id="firstName" class="form-control" placeholder="First Name">
             <input type="text" id="lastName" class="form-control" placeholder="Last Name">
         </div>
