--- a/02.programmastructuur/oefening3.html
+++ b/02.programmastructuur/oefening3.html
@@ -19,7 +19,7 @@
         </div>
         <div class="input-group mb-3">
             <div class="input-group-prepend">
-                <button class="btn btn-outline-primary" type="button" onclick="showMultiplications()">order</button>
+                <button class="btn btn-outline-primary" type="button" onclick="showMultiplications()">show</button>
             </div>
         </div>
     </form>
