oefening 2 en 3 + rename files

--- a/04_arrays/uitgenodigd.html
+++ b/04_arrays/uitgenodigd.html
@@ -19,8 +19,7 @@
 
             <div class="input-group mb-3">
                 <button class="btn btn-outline-primary" type="button" onclick="checkInvited()">check</button>
-                <button class="btn btn-outline-primary" type="button" onclick="showAllInvited()">toon uitgenodigden</button>
-                <button class="btn btn-outline-primary" type="button" onclick="showVIP()">toon VIP</button>
+                <button class="btn btn-outline-primary" type="button" onclick="showAllInvited()">toon genodigden</button>
                 <button class="btn btn-outline-primary" type="button" onclick="addInvitee()">nodig uit</button>
             </div>
         </div>
