--- a/04_arrays/uitgenodigd.html
+++ b/04_arrays/uitgenodigd.html
@@ -18,9 +18,9 @@
             <input type="text" id="name" class="form-control" placeholder="naam">
 
             <div class="input-group mb-3">
-                <button class="btn btn-outline-primary" type="button" onclick="checkInvited()">check</button>
-                <button class="btn btn-outline-primary" type="button" onclick="showAllInvited()">toon genodigden</button>
-                <button class="btn btn-outline-primary" type="button" onclick="addInvitee()">nodig uit</button>
+                <button class="btn btn-outline-primary" type="button" onclick="checkInvitedButton()">check</button>
+                <button class="btn btn-outline-primary" type="button" onclick="showAllInvitedButton()">toon genodigden</button>
+                <button class="btn btn-outline-primary" type="button" onclick="addInviteeButton()">nodig uit</button>
             </div>
         </div>
     </form>
