oefening 3 - start code

--- a/04_arrays/uitgenodigd.html
+++ b/04_arrays/uitgenodigd.html
@@ -15,12 +15,11 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">Geef naam</span>
             </div>
-            <input type="text" id="name" class="form-control" placeholder="naam" oninput="filterVisitors()">
+            <input type="text" id="name" class="form-control" placeholder="naam">
 
             <div class="input-group mb-3">
                 <button class="btn btn-outline-primary" type="button" onclick="checkVisitorPresentButton()">check</button>
                 <button class="btn btn-outline-primary" type="button" onclick="toggleShowVisitorsButton()">toon genodigden</button>
-                <button class="btn btn-outline-primary" type="button" onclick="addVisitorButton()">nodig uit</button>
             </div>
         </div>
     </form>
