--- a/05_objects/index.html
+++ b/05_objects/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <title>Objects en arrays</title>
-    <script src="js/02.arraymethods.js"></script>
-</head>
-<body>
-
-<div class="container">
-    <h4>Objects en arrays</h4>
-    <ul class="list-group">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
+    <title>Object & Arrays</title>
+  </head>
+  <body>
+    <div class="container m-4">
+      <h4>Object & Arrays</h4>
+      <ul class="list-group">
         <li class="list-group-item">open index.html in de browser.</li>
         <li class="list-group-item">open de browser dev tools.</li>
         <li class="list-group-item">kijk in de console en in de Sources tab.</li>
-    </ul>
-</div>
+      </ul>
+    </div>
 
+    <script type="module" src="js/demo/01.objects.js"></script>
+    <script type="module" src="js/demo/02.shorthand.js"></script>
+    <script type="module" src="js/demo/03.rest.js"></script>
+    <script type="module" src="js/demo/04.destructuring.js"></script>
+    <script type="module" src="js/demo/05.json.js"></script>
+    <script type="module" src="js/demo/06.array-of-objects.js"></script>
 
-<script type="text/javascript" src="js/01.objects.js"></script>
-<script type="text/javascript" src="js/02.shorthand.js"></script>
-<script type="text/javascript" src="js/03.rest.js"></script>
-<script type="text/javascript" src="js/04.destructuring.js"></script>
-<script type="text/javascript" src="js/05.json.js"></script>
-</body>
+    <script type="module" src="js/exercises/01.oefening-books.js"></script>
+    <script type="module" src="js/exercises/02.oefening-voeg-in.js"></script>
+    <script type="module" src="js/exercises/03.oefening-prijsverhoging.js"></script>
+    <script type="module" src="js/exercises/04.oefening-steden.js"></script>
+  </body>
 </html>
