--- a/toetsen/toets1_20232024/oefening.html
+++ b/toetsen/toets1_20232024/oefening.html
@@ -5,6 +5,11 @@
     <title>Oefening toets 1 2023-2024</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <style>
+        .favoriteAttraction {
+            background-color: aqua;
+        }
+    </style>
 </head>
 <body>
 
