--- a/toetsen/toets1_20232024_SKW/startcode/oefening.html
+++ b/toetsen/toets1_20232024_SKW/startcode/oefening.html
@@ -6,8 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <style>
-        .favoriteAttraction {
-            background-color: aqua;
+        .favoritePerformance {
+            background-color: mediumslateblue;
+            color: white;
         }
     </style>
 </head>
@@ -17,12 +18,14 @@
     <h1>Attracties</h1>
     <form>
         <div class="input-group mb-3">
-            <div class="input-group">
-                <span class="input-group-text">hoogte</span>
-                <input type="number" id="height" class="form-control" placeholder="hoogte">
-                <button class="btn btn-outline-primary" type="button" onclick="filterHeight()">filter hoogte</button>
+            <div class="input-group mb-1">
+                <span class="input-group-text">stage</span>
+                <input type="text" id="stage" class="form-control" placeholder="stage" oninput="filterStage()">
             </div>
-
+            <div class="input-group">
+                <span class="input-group-text">genre</span>
+                <input type="text" id="genre" class="form-control" placeholder="genre" oninput="filterGenre()">
+            </div>
         </div>
     </form>
     <div id="message" class="alert alert-primary"></div>
