--- a/toetsen/toets1_20232024_SKW/startcode/oefening.html
+++ b/toetsen/toets1_20232024_SKW/startcode/oefening.html
@@ -15,7 +15,7 @@
 <body>
 
 <div class="m-2">
-    <h1>Attracties</h1>
+    <h1>Lineup</h1>
     <form>
         <div class="input-group mb-3">
             <div class="input-group mb-1">
