--- a/06_citaten/oefcitaten.html
+++ b/06_citaten/oefcitaten.html
@@ -23,7 +23,7 @@
 
     <div id="quote"></div>
     <button class="btn btn-outline-primary" id="authorButton" onclick="showAuthor()">Van wie is dit citaat?</button>
-    <button class="btn btn-outline-primary" id="nextCitaatButton" onclick="showOneCitaat()">Volgend citaat!</button>
+    <button class="btn btn-outline-primary" id="nextCitaatButton" onclick="showOneRandomCitaat()">Volgend citaat!</button>
 
     <script src="js/oefcitaten.js"></script>
 </div>
