rename files so that the are exactly as in the code the students know

--- a/toetsen/toets2_20232024_rfc/oefcitaten.html
+++ b/toetsen/toets2_20232024_rfc/oefcitaten.html
@@ -37,7 +37,7 @@
 
       <div id="quote"></div>
 
-      <script src="index.js"></script>
+      <script src="js/oefcitaten.js"></script>
     </div>
   </body>
 </html>
